Fixed some grammar, improved documentation.

--- a/Week_3/Segmentation_clustering_Toronto.ipynb
+++ b/Week_3/Segmentation_clustering_Toronto.ipynb
@@ -40,9 +40,7 @@
     "## 1: Get the table JSON from Wikipedia and parse it into a DataFrame\n",
     "Wikipedia has a <a href=\"https://www.mediawiki.org/wiki/API:Main_page\">really helpful description of their API</a> which is pretty easy to understand.  \n",
     "\n",
-    "One does not need to authenticate to use their API for page requests. The main reference I used was the <a href=\"https://www.mediawiki.org/wiki/API:Parsing_wikitext\">API: Parsing wikitext page</a>.  \n",
-    "\n",
-    "__Note!__ Some things about the \"List of postal codes...\" table have changed since the Coursera assignment was written. For example, postal code M5A no longer appears twice, and there are no entries that have a borough but no neighbourhood. This didn't really simplify anything, and I'm confident my code would produce the desired output with the old table version. I'm concerned that I'll be evaluated based on these non-existent features being processed correctly in my Notebook, though."
+    "One does not need to authenticate to use their API for page requests. The main reference I used was the <a href=\"https://www.mediawiki.org/wiki/API:Parsing_wikitext\">API: Parsing wikitext page</a>.  "
    ]
   },
   {
@@ -383,7 +381,7 @@
    "metadata": {},
    "source": [
     "## 2: Getting GPS coordinates for the postal codes\n",
-    "The assignment tells us to use either the geocoder library, which did not work well then and doesn't seem to work at all now. I used the CSV linked to, though I'll comment it would have been pretty easy to use the Nominatim part of geopy for this!"
+    "I used the CSV linked to in the assignment, though I'll comment it would have been pretty easy to use the Nominatim part of geopy for this!"
    ]
   },
   {
@@ -492,7 +490,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we join the two DataFrames by first setting the index to \"PostalCode\". This nicely adds the columns with GPS coordinates to the left of our existing columns!"
+    "Now we left join the two DataFrames by first setting the index to \"PostalCode\".  \n",
+    "(This adds the columns with GPS coordinates to the left of our existing columns.)"
    ]
   },
   {
